<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.wallet.activity.DepositInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="66dp">

        <include layout="@layout/include_title_bar" />

        <TextView
            android:id="@+id/deposit_in_record"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/deposit_in_record"
            android:textColor="@color/colorText"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/deposit_in_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/deposit_in_all"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/deposit_in_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@id/deposit_in_all"
            android:background="@drawable/shape_edit_wallet"
            android:gravity="center_vertical"
            android:hint="@string/deposit_in_edit"
            android:inputType="numberDecimal"
            android:maxLength="20"
            android:paddingLeft="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/deposit_in_btn"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/deposit_in_btn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:text="@string/deposit_in_toast_1"
        android:textColor="@color/colorTextColorMain"
        android:textSize="14dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/deposit_in_toast_2"
        android:textColor="@color/colorTextColorToast"
        android:textSize="11dp" />

</LinearLayout>