<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_wallet_back"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="12dp"
    android:background="@drawable/shape_back_item"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/shape_back_item_wallet"
        android:paddingLeft="18dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/item_wallet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="XXX"
            android:textColor="#333333"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/item_wallet_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/item_wallet_available"
            android:textColor="#375880"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_wallet_frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/item_wallet_frozen"
            android:textColor="#375880"
            android:textSize="13dp"
            android:textStyle="bold" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/item_wallet_1"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_wallet_recharge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_item_wallet_btn"
            android:gravity="center"
            android:text="@string/item_wallet_recharge"
            android:textColor="#999999"
            android:textSize="14dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/item_wallet_withdrawal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_item_wallet_btn"
            android:gravity="center"
            android:text="@string/item_wallet_withdrawal"
            android:textColor="#999999"
            android:textSize="14dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/item_wallet_deposit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_item_wallet_btn"
            android:gravity="center"
            android:text="@string/item_wallet_deposit"
            android:textColor="#999999"
            android:textSize="14dp" />

    </LinearLayout>

</LinearLayout>