<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000B08"
    android:orientation="vertical"
    tools:context=".ui.wallet.activity.DepositOutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="66dp">

        <include layout="@layout/include_title_bar" />

        <TextView
            android:id="@+id/deposit_out_record"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/deposit_out_record"
            android:textColor="@color/colorText"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/deposit_out_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/deposit_out_all"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/deposit_out_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@id/deposit_out_all"
            android:background="@drawable/shape_back_edit"
            android:gravity="center_vertical"
            android:hint="@string/deposit_out_edit"
            android:inputType="numberDecimal"
            android:maxLength="20"
            android:paddingLeft="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <TextView
        android:id="@+id/deposit_out_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_back_btn_out_login"
        android:gravity="center"
        android:text="@string/deposit_out_btn"
        android:textColor="@color/colorText"
        android:textSize="18dp" />

</LinearLayout>